--- a/order-manager-ui/src/app/display-orders/display-orders.component.html
+++ b/order-manager-ui/src/app/display-orders/display-orders.component.html
@@ -1,32 +1,32 @@
-<table mat-table [dataSource]="dataSource">
+<table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
 
     <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Order ID</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Order ID</th>
         <td mat-cell *matCellDef="let element"> {{element.id}} </td>
     </ng-container>
 
     <ng-container matColumnDef="employeeName">
-        <th mat-header-cell *matHeaderCellDef>Employee</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
         <td mat-cell *matCellDef="let element"> {{element.employeeName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="customerName">
-        <th mat-header-cell *matHeaderCellDef>Customer</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
         <td mat-cell *matCellDef="let element"> {{element.customerName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="shipperName">
-        <th mat-header-cell *matHeaderCellDef>Shipper</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Shipper</th>
         <td mat-cell *matCellDef="let element"> {{element.shipperName}} </td>
     </ng-container>
 
     <ng-container matColumnDef="orderDate">
-        <th mat-header-cell *matHeaderCellDef>Order Date</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Date</th>
         <td mat-cell *matCellDef="let element"> {{datePipe.transform(element.orderDate, 'dd-MM-yyyy')}} </td>
     </ng-container>
 
     <ng-container matColumnDef="orderTotalPrice">
-        <th mat-header-cell *matHeaderCellDef>Order Total</th>
+        <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Total</th>
         <td mat-cell *matCellDef="let element"> {{element.orderTotalPrice}} </td>
     </ng-container>
 
