--- a/order-manager-ui/src/app/display-orders/display-orders.component.html
+++ b/order-manager-ui/src/app/display-orders/display-orders.component.html
@@ -1,43 +1,48 @@
-<table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
+<div class="table_container">
+    <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
 
-    <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Order ID</th>
-        <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-    </ng-container>
+        <ng-container matColumnDef="id">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Order ID</th>
+            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="employeeName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
-        <td mat-cell *matCellDef="let element"> {{element.employeeName}} </td>
-    </ng-container>
+        <ng-container matColumnDef="employeeName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Employee</th>
+            <td mat-cell *matCellDef="let element"> {{element.employeeName}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="customerName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
-        <td mat-cell *matCellDef="let element"> {{element.customerName}} </td>
-    </ng-container>
+        <ng-container matColumnDef="customerName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Customer</th>
+            <td mat-cell *matCellDef="let element"> {{element.customerName}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="shipperName">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Shipper</th>
-        <td mat-cell *matCellDef="let element"> {{element.shipperName}} </td>
-    </ng-container>
+        <ng-container matColumnDef="shipperName">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Shipper</th>
+            <td mat-cell *matCellDef="let element"> {{element.shipperName}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="orderDate">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Date</th>
-        <td mat-cell *matCellDef="let element"> {{datePipe.transform(element.orderDate, 'dd-MM-yyyy')}} </td>
-    </ng-container>
+        <ng-container matColumnDef="orderDate">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Date</th>
+            <td mat-cell *matCellDef="let element"> {{datePipe.transform(element.orderDate, 'dd-MM-yyyy')}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="orderTotalPrice">
-        <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Total</th>
-        <td mat-cell *matCellDef="let element"> {{element.orderTotalPrice}} </td>
-    </ng-container>
+        <ng-container matColumnDef="orderTotalPrice">
+            <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Total</th>
+            <td mat-cell *matCellDef="let element"> {{element.orderTotalPrice}} </td>
+        </ng-container>
 
-    <ng-container matColumnDef="remove">
-        <th mat-header-cell *matHeaderCellDef>Remove</th>
-        <td mat-cell *matCellDef="let element">
-            <mat-icon (click)="deleteOrder(element.id)">delete</mat-icon>
-        </td>
-    </ng-container>
+        <ng-container matColumnDef="remove">
+            <th mat-header-cell *matHeaderCellDef>Remove</th>
+            <td mat-cell *matCellDef="let element">
+                <mat-icon (click)="deleteOrder(element.id)">delete</mat-icon>
+            </td>
+        </ng-container>
 
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        <tr mat-header-row *matHeaderRowDef="displayedColumns; sticky: true"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+</div>
 
-</table>
+<div class="footer">
+    <mat-paginator [pageSize]="5" [pageSizeOptions]="[5,8]" > </mat-paginator>
+</div>
