--- a/order-manager-ui/src/app/display-orders/display-orders.component.html
+++ b/order-manager-ui/src/app/display-orders/display-orders.component.html
@@ -1,3 +1,21 @@
+<div class="header" fxLayout="row" fxLayoutAlign="center center">
+
+    <mat-form-field appearance="outline">
+        <mat-label>Filter orders</mat-label>
+        <input matInput [formControl]="filterControl" placeholder="Type..." [matAutocomplete]="auto" #inputField
+            #autoTrigger="matAutocompleteTrigger">
+        <button *ngIf="filterControl.value" matSuffix mat-icon-button aria-label="Clear" (click)="clearFilter()">
+            <mat-icon>close</mat-icon>
+        </button>
+        <mat-autocomplete #auto="matAutocomplete">
+            <mat-option *ngFor="let option of filteredOrders$ | async"
+                [value]="filterService.getPropertyValue(option, filterControl)">
+                {{ filterService.getPropertyValue(option, filterControl)}}
+            </mat-option>
+        </mat-autocomplete>
+    </mat-form-field>
+</div>
+
 <div class="table_container">
     <table mat-table [dataSource]="dataSource" matSort (matSortChange)="sortData($event)">
 
@@ -23,7 +41,7 @@
 
         <ng-container matColumnDef="orderDate">
             <th mat-header-cell *matHeaderCellDef mat-sort-header>Order Date</th>
-            <td mat-cell *matCellDef="let element"> {{datePipe.transform(element.orderDate, 'dd-MM-yyyy')}} </td>
+            <td mat-cell *matCellDef="let element"> {{element.orderDate}} </td>
         </ng-container>
 
         <ng-container matColumnDef="orderTotalPrice">
@@ -44,5 +62,5 @@
 </div>
 
 <div class="footer">
-    <mat-paginator [pageSize]="5" [pageSizeOptions]="[5,8]" > </mat-paginator>
+    <mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10]"> </mat-paginator>
 </div>
