UI: + Facade + env url

--- a/order-manager-ui/src/app/app.component.html
+++ b/order-manager-ui/src/app/app.component.html
@@ -1,1 +1,8 @@
-<app-display-orders></app-display-orders>
+<header fxLayoutAlign="center">
+    <a mat-raised-button routerLink="/display-orders">Display</a>
+    <a mat-raised-button routerLink="/add-order">Add</a>
+</header>
+
+<main>
+    <router-outlet></router-outlet>
+</main>
