--- a/order-manager-ui/src/app/display-orders/display-orders.component.html
+++ b/order-manager-ui/src/app/display-orders/display-orders.component.html
@@ -66,6 +66,6 @@
     </table>
 </div>
 
-<div class="footer">
+<div>
     <mat-paginator [pageSize]="5" [pageSizeOptions]="[5,10]"> </mat-paginator>
 </div>
